--- a/charts/dremio/templates/dremio-service-ui.yaml
+++ b/charts/dremio/templates/dremio-service-ui.yaml
@@ -10,4 +10,4 @@ spec:
     name: web
   selector:
     app: dremio-coordinator
-  type: NodePort
+  type: {{ .Values.serviceType | default "NodePort" }}
