--- a/charts/dremio/templates/dremio-coordinator.yaml
+++ b/charts/dremio/templates/dremio-coordinator.yaml
@@ -4,10 +4,10 @@ metadata:
   name: dremio-coordinator
 spec:
   serviceName: "dremio-coordinator"
-  replicas: 1
+  replicas: {{.Values.coordinator.count}}
   selector:
     matchLabels:
-      app: dremio-coordinator  
+      app: dremio-coordinator
   template:
     metadata:
       labels:
@@ -15,27 +15,22 @@ spec:
     spec:
       containers:
       - name: dremio-coordinator
-        image: dremio/dremio-oss
+        image: {{.Values.image}}
+        resources:
+          requests:
+            memory: {{.Values.coordinator.memory}}M
+            cpu: {{.Values.coordinator.cpu}}
         env:
         - name: DIST_PATH
-          valueFrom:
-            configMapKeyRef:
-              name: dremio-config
-              key: paths.dist
+          value: {{.Values.path.dist}}
         - name: DREMIO_MAX_HEAP_MEMORY_SIZE_MB
-          valueFrom:
-            configMapKeyRef:
-              name: dremio-config
-              key: coordinator.memory.heap
+          value: "{{ template "HeapMemory" .Values.coordinator.memory }}"
         - name: DREMIO_MAX_DIRECT_MEMORY_SIZE_MB
-          valueFrom:
-            configMapKeyRef:
-              name: dremio-config
-              key: coordinator.memory.direct
+          value: "{{ template "DirectMemory" .Values.coordinator.memory }}"
         - name: LOCAL_POD_IP
           valueFrom:
             fieldRef:
-              fieldPath: status.podIP    
+              fieldPath: status.podIP
         command: ["/opt/dremio/bin/dremio"]
         args:
         - "start-fg"
@@ -52,3 +47,7 @@ spec:
           name: client
         - containerPort: 45678
           name: server
+      initContainers:
+      - name: wait-for-zk
+        image: busybox
+        command:  ["sh", "-c", "until nc -z zk-hs 2181; do echo waiting for zookeeper; sleep 2; done;"]
