--- a/charts/dremio/templates/dremio-master.yaml
+++ b/charts/dremio/templates/dremio-master.yaml
@@ -2,9 +2,11 @@ apiVersion: apps/v1
 kind: StatefulSet
 metadata:
   name: dremio-master
+  labels:
+    app: dremio-master
 spec:
   serviceName: "dremio-master"
-  replicas: 1
+  replicas: {{.Values.coordinator.master_count}}
   selector:
     matchLabels:
       app: dremio-coordinator
@@ -13,28 +15,33 @@ spec:
       labels:
         app: dremio-coordinator
     spec:
+      affinity:
+        podAntiAffinity:
+          requiredDuringSchedulingIgnoredDuringExecution:
+            - labelSelector:
+                matchExpressions:
+                  - key: "app"
+                    operator: In
+                    values:
+                    - dremio-master
+              topologyKey: "kubernetes.io/hostname"
       containers:
       - name: dremio-master-coordinator
-        image: dremio/dremio-oss
+        image: {{.Values.image}}
+        resources:
+          requests:
+            memory: {{.Values.coordinator.memory}}M
+            cpu: {{.Values.coordinator.cpu}}
         volumeMounts:
         - name: dremio-master-volume
           mountPath: /opt/dremio/data
         env:
         - name: DIST_PATH
-          valueFrom:
-            configMapKeyRef:
-              name: dremio-config
-              key: paths.dist
+          value: {{.Values.path.dist}}
         - name: DREMIO_MAX_HEAP_MEMORY_SIZE_MB
-          valueFrom:
-            configMapKeyRef:
-              name: dremio-config
-              key: coordinator.memory.heap
+          value: "{{ template "HeapMemory" .Values.coordinator.memory }}"
         - name: DREMIO_MAX_DIRECT_MEMORY_SIZE_MB
-          valueFrom:
-            configMapKeyRef:
-              name: dremio-config
-              key: coordinator.memory.direct
+          value: "{{ template "DirectMemory" .Values.coordinator.memory }}"
         - name: LOCAL_POD_IP
           valueFrom:
             fieldRef:
@@ -55,8 +62,11 @@ spec:
           name: client
         - containerPort: 45678
           name: server
-      # since we're mounting a separate volume, reset permission to dremio uid/gid (999:999)
       initContainers:
+      - name: wait-for-zk
+        image: busybox
+        command:  ["sh", "-c", "until nc -z zk-hs 2181; do echo waiting for zookeeper; sleep 2; done;"]
+      # since we're mounting a separate volume, reset permission to dremio uid/gid (999:999)
       - name: chown-data-directory
         image: busybox
         volumeMounts:
