--- a/charts/dremio/values.yaml
+++ b/charts/dremio/values.yaml
@@ -1,17 +1,17 @@
 image: dremio/dremio-oss
 path:
   dist: "pdfs:///tmp/pdfs"
+# Check out Dremio documentation for memory and cpu requirements for
+# the coordinators and the executors. The value of memory should be in MB.
 coordinator:
-  memory:
-    heap: 1000
-    direct: 1000
+  memory: 2048
+  cpu: 1
   count: 1
   master_count: 1
 executor:
-  memory:
-    heap: 1000
-    direct: 1000
+  memory: 2048
+  cpu: 1
   count: 1
 # If you are deploying in the cloud that support LoadBalanced services,
 # uncomment the line below to get a external ip assigned to the services.
-#serviceType: LoadBalancer
+serviceType: LoadBalancer
