DX-12766 fix memory/cpu value in executor template
Change-Id: Ic5be3152cdd85b97b74b7a9203551b9980ad3fbc

--- a/charts/dremio/templates/dremio-executor.yaml
+++ b/charts/dremio/templates/dremio-executor.yaml
@@ -18,8 +18,8 @@ spec:
         image: {{.Values.image}}
         resources:
           requests:
-            memory: {{.Values.coordinator.memory}}M
-            cpu: {{.Values.coordinator.cpu}}
+            memory: {{.Values.executor.memory}}M
+            cpu: {{.Values.executor.cpu}}
         env:
         - name: DIST_PATH
           value: {{.Values.path.dist}}
