enable session affinity for the services
Change-Id: I7d51d8d16dfed83ca3125365e46b49912d1d987e

--- a/charts/dremio/templates/dremio-service-client.yaml
+++ b/charts/dremio/templates/dremio-service-client.yaml
@@ -11,3 +11,4 @@ spec:
   selector:
     app: dremio-coordinator
   type: {{ .Values.serviceType | default "NodePort" }}
+  sessionAffinity: ClientIP
