--- a/charts/dremio/templates/dremio-service-ui.yaml
+++ b/charts/dremio/templates/dremio-service-ui.yaml
@@ -11,3 +11,4 @@ spec:
   selector:
     app: dremio-coordinator
   type: {{ .Values.serviceType | default "NodePort" }}
+  sessionAffinity: ClientIP
