use single ip/hostname (service) for both ui and client
Change-Id: Ic7c016e7d0fd28faa3d9c743822ce149bcbc9598

--- a/charts/dremio/templates/dremio-service-client.yaml
+++ b/charts/dremio/templates/dremio-service-client.yaml
@@ -8,6 +8,8 @@ spec:
   ports:
   - port: 31010
     name: client
+  - port: 9047
+    name: web
   selector:
     app: dremio-coordinator
   type: {{ .Values.serviceType | default "NodePort" }}
