--- a/charts/dremio/templates/dremio-service-client.yaml
+++ b/charts/dremio/templates/dremio-service-client.yaml
@@ -8,7 +8,8 @@ spec:
   ports:
   - port: 31010
     name: client
-  - port: 9047
+  - port: {{ .Values.coordinator.web.port | default 9047 }}
+    targetPort: 9047
     name: web
   selector:
     app: dremio-coordinator
