--- a/charts/dremio/templates/dremio-executor.yaml
+++ b/charts/dremio/templates/dremio-executor.yaml
@@ -1,10 +1,16 @@
 apiVersion: apps/v1
-kind: ReplicaSet
+kind: Deployment
 metadata:
   name: dremio-executor
 spec:
   serviceName: "dremio-executor"
   replicas: {{.Values.executor.count}}
+  revisionHistoryLimit: 1
+  strategy:
+      type: RollingUpdate
+      rollingUpdate:
+         maxSurge: 0
+         maxUnavailable: 1
   selector:
     matchLabels:
       app: dremio-executor
@@ -13,6 +19,7 @@ spec:
       labels:
         app: dremio-executor
     spec:
+      terminationGracePeriodSeconds: 5
       containers:
       - name: dremio-executor
         image: {{.Values.image}}
