DX-14659: pass args via DREMIO_JAVA_EXTRA_OPTS
This has been verified to work with old images as well as
images that uses 3.0 dremio start script.

Change-Id: I4b78e2848517d83ac22e7663e78066f628b895ed

--- a/charts/dremio/templates/dremio-executor.yaml
+++ b/charts/dremio/templates/dremio-executor.yaml
@@ -38,14 +38,15 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: status.podIP
+        - name: DREMIO_JAVA_EXTRA_OPTS
+          value: >-
+            -Dzookeeper=zk-hs:2181
+            -Dregistration.publish-host=$(LOCAL_POD_IP)
+            -Dservices.coordinator.enabled=false
+            -Dpaths.dist=$(DIST_PATH)
         command: ["/opt/dremio/bin/dremio"]
         args:
         - "start-fg"
-        - ""
-        - "-Dzookeeper=zk-hs:2181"
-        - "-Dregistration.publish-host=$(LOCAL_POD_IP)"
-        - "-Dservices.coordinator.enabled=false"
-        - "-Dpaths.dist=$(DIST_PATH)"
         ports:
         - containerPort: 45678
           name: server
