DX-14782: leverage the default storage in underlying k8s clusters
Change-Id: Id5ec6357b81dd36b9c110787f9baf5808cff1c27

--- a/charts/dremio/templates/dremio-master.yaml
+++ b/charts/dremio/templates/dremio-master.yaml
@@ -86,7 +86,14 @@ spec:
         command: ["/opt/dremio/bin/dremio-admin"]
         args:
         - "upgrade"
-      volumes:
-      - name: dremio-master-volume
-        persistentVolumeClaim:
-          claimName: dremio-master-volume
+  volumeClaimTemplates:
+  - metadata:
+      name: dremio-master-volume
+    spec:
+      accessModes: [ "ReadWriteOnce" ]
+      {{- if .Values.coordinator.storageClass }}
+      storageClassName: {{ .Values.coordinator.storageClass }}
+      {{- end }}
+      resources:
+        requests:
+          storage: {{.Values.coordinator.volumeSize}}
