--- a/charts/dremio/templates/dremio-executor.yaml
+++ b/charts/dremio/templates/dremio-executor.yaml
@@ -1,9 +1,9 @@
 apiVersion: apps/v1
-kind: Deployment
+kind: StatefulSet
 metadata:
   name: dremio-executor
 spec:
-  serviceName: "dremio-executor"
+  serviceName: "dremio-cluster-pod"
   replicas: {{.Values.executor.count}}
   podManagementPolicy: "Parallel"
   revisionHistoryLimit: 1
@@ -19,6 +19,7 @@ spec:
     metadata:
       labels:
         app: dremio-executor
+        role: dremio-cluster-pod
       annotations:
         dremio-configmap/checksum: {{ (.Files.Glob "config/*").AsConfig | sha256sum }}
     spec:
@@ -31,6 +32,8 @@ spec:
             memory: {{.Values.executor.memory}}M
             cpu: {{.Values.executor.cpu}}
         volumeMounts:
+        - name: dremio-executor-volume
+          mountPath: /opt/dremio/data
         - name: dremio-config
           mountPath: /opt/dremio/conf
         env:
@@ -38,14 +41,9 @@ spec:
           value: "{{ template "HeapMemory" .Values.executor.memory }}"
         - name: DREMIO_MAX_DIRECT_MEMORY_SIZE_MB
           value: "{{ template "DirectMemory" .Values.executor.memory }}"
-        - name: LOCAL_POD_IP
-          valueFrom:
-            fieldRef:
-              fieldPath: status.podIP
         - name: DREMIO_JAVA_EXTRA_OPTS
           value: >-
             -Dzookeeper=zk-hs:2181
-            -Dregistration.publish-host=$(LOCAL_POD_IP)
             -Dservices.coordinator.enabled=false
             {{- if .Values.extraStartParams }}
             {{ .Values.extraStartParams }}
@@ -60,7 +58,30 @@ spec:
       - name: wait-for-zk
         image: busybox
         command:  ["sh", "-c", "until ping -c 1 -W 1 zk-hs > /dev/null; do echo waiting for zookeeper host; sleep 2; done;"]
+      # since we're mounting a separate volume, reset permission to dremio uid/gid
+      - name: chown-data-directory
+        image: {{.Values.image}}
+        securityContext:
+          runAsUser: 0
+        volumeMounts:
+        - name: dremio-executor-volume
+          mountPath: /opt/dremio/data
+        command: ["chown"]
+        args:
+        - "dremio:dremio"
+        - "/opt/dremio/data"
       volumes:
       - name: dremio-config
         configMap:
           name: dremio-config
+  volumeClaimTemplates:
+  - metadata:
+      name: dremio-executor-volume
+    spec:
+      accessModes: [ "ReadWriteOnce" ]
+      {{- if .Values.storageClass }}
+      storageClassName: {{ .Values.storageClass }}
+      {{- end }}
+      resources:
+        requests:
+          storage: {{.Values.executor.volumeSize}}
