DX-14781: turn off sessionAffinity setting by default
Having only one coordinator (master) does not require session affinity.
If a user has more than one coordinator and their loadbalancer supports
sessionAffinity, they can enable it via values.yaml

Change-Id: Id49c0c9f238f324af8af0cdf927b8db607522566

--- a/charts/dremio/templates/dremio-service-client.yaml
+++ b/charts/dremio/templates/dremio-service-client.yaml
@@ -15,7 +15,9 @@ spec:
   selector:
     app: dremio-coordinator
   type: {{ .Values.serviceType | default "NodePort" }}
-  sessionAffinity: ClientIP
+  {{- if .Values.sessionAffinity }}
+  sessionAffinity: {{ .Values.sessionAffinity }}
+  {{- end }}
 ---
 apiVersion: v1
 kind: Service
