DX-15065: support private docker repositories
Change-Id: I5129bb08ee06e10cfb6a5bbb4fd5c388073d32db

--- a/charts/dremio/templates/dremio-coordinator.yaml
+++ b/charts/dremio/templates/dremio-coordinator.yaml
@@ -65,3 +65,7 @@ spec:
       - name: dremio-config
         configMap:
           name: dremio-config
+      {{- if .Values.imagePullSecrets }}
+      imagePullSecrets:
+        - name: {{ .Values.imagePullSecrets }}
+      {{- end}}
