--- a/charts/dremio/templates/dremio-master.yaml
+++ b/charts/dremio/templates/dremio-master.yaml
@@ -90,6 +90,10 @@ spec:
       - name: dremio-config
         configMap:
           name: dremio-config
+      {{- if .Values.imagePullSecrets }}
+      imagePullSecrets:
+        - name: {{ .Values.imagePullSecrets }}
+      {{- end}}
   volumeClaimTemplates:
   - metadata:
       name: dremio-master-volume
