--- a/charts/dremio/templates/dremio-executor.yaml
+++ b/charts/dremio/templates/dremio-executor.yaml
@@ -74,6 +74,10 @@ spec:
       - name: dremio-config
         configMap:
           name: dremio-config
+      {{- if .Values.imagePullSecrets }}
+      imagePullSecrets:
+        - name: {{ .Values.imagePullSecrets }}
+      {{- end}}
   volumeClaimTemplates:
   - metadata:
       name: dremio-executor-volume
