wip iwp wip wip
asdf

Change-Id: I983a26253c6b6eef1fd91c8ef031c91c379b745c

--- a/images/dremio-oss/Dockerfile
+++ b/images/dremio-oss/Dockerfile
@@ -21,23 +21,23 @@ MAINTAINER Dremio
 LABEL org.label-schema.name='dremio/dremio-oss'
 LABEL org.label-schema.description='Dremio OSS.'
 
-ARG DOWNLOAD_URL=https://download.dremio.com/community-server/3.0.1-201811132128360291-804fe82/dremio-community-3.0.1-201811132128360291-804fe82.tar.gz
-RUN \
-  mkdir -p /opt/dremio \
-  && mkdir -p /var/lib/dremio \
-  && mkdir -p /var/run/dremio \
-  && mkdir -p /var/log/dremio \
-  && mkdir -p /opt/dremio/data \
-  \
-  && groupadd --system dremio \
-  && useradd --base-dir /var/lib/dremio --system --gid dremio dremio \
-  && chown -R dremio:dremio /opt/dremio/data \
-  && chown -R dremio:dremio /var/run/dremio \
-  && chown -R dremio:dremio /var/log/dremio \
-  && chown -R dremio:dremio /var/lib/dremio \
-  && wget -q "${DOWNLOAD_URL}" -O dremio.tar.gz \
-  && tar vxfz dremio.tar.gz -C /opt/dremio --strip-components=1 \
-  && rm -rf dremio.tar.gz
+ARG  DOWNLOAD_URL=https://download.dremio.com/community-server/3.0.1-201811132128360291-804fe82/dremio-community-3.0.1-201811132128360291-804fe82.tar.gz
+RUN  echo "${DOWNLOAD_URL}"
+RUN  ls -la .
+RUN  mkdir -p /opt/dremio
+RUN  mkdir -p /var/lib/dremio
+RUN  mkdir -p /var/run/dremio
+RUN  mkdir -p /var/log/dremio
+RUN  mkdir -p /opt/dremio/data
+RUN  groupadd --system dremio
+RUN  useradd --base-dir /var/lib/dremio --system --gid dremio dremio
+RUN  chown -R dremio:dremio /opt/dremio/data
+RUN  chown -R dremio:dremio /var/run/dremio
+RUN  chown -R dremio:dremio /var/log/dremio
+RUN  chown -R dremio:dremio /var/lib/dremio
+RUN  wget "${DOWNLOAD_URL}" -O dremio.tar.gz
+RUN  tar vxfz dremio.tar.gz -C /opt/dremio --strip-components=1
+RUN  rm -rf dremio.tar.gz
 
 EXPOSE 9047/tcp
 EXPOSE 31010/tcp
