DX-15647: enable VPC internal loadbalancer IP
Change-Id: I73a66d0020b5f61abf08de6c0b2b0a1bf17fc663

--- a/charts/dremio/templates/dremio-service-client.yaml
+++ b/charts/dremio/templates/dremio-service-client.yaml
@@ -4,6 +4,15 @@ metadata:
   name: dremio-client
   labels:
     app: dremio-client
+  {{- if .Values.internalLoadBalancer }}
+  {{- if eq .Values.internalLoadBalancer true }}
+  annotations:
+    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
+    cloud.google.com/load-balancer-type: "Internal"
+    service.beta.kubernetes.io/aws-load-balancer-internal: 0.0.0.0/0
+    service.beta.kubernetes.io/openstack-internal-load-balancer: "true"
+  {{- end }}
+  {{- end }}
 spec:
   ports:
   - port: {{ .Values.coordinator.client.port | default 31010 }}
