DX-15648: add imagePullPolicy attribute
Change-Id: I3eb55833c565ef0e7417369d3b8aa20d764f85c0

--- a/charts/dremio/templates/dremio-coordinator.yaml
+++ b/charts/dremio/templates/dremio-coordinator.yaml
@@ -27,6 +27,7 @@ spec:
       containers:
       - name: dremio-coordinator
         image: {{.Values.image}}
+        imagePullPolicy: IfNotPresent
         resources:
           requests:
             memory: {{.Values.coordinator.memory}}M
