--- a/charts/dremio/templates/dremio-executor.yaml
+++ b/charts/dremio/templates/dremio-executor.yaml
@@ -27,6 +27,7 @@ spec:
       containers:
       - name: dremio-executor
         image: {{.Values.image}}
+        imagePullPolicy: IfNotPresent
         resources:
           requests:
             memory: {{.Values.executor.memory}}M
@@ -61,6 +62,7 @@ spec:
       # since we're mounting a separate volume, reset permission to dremio uid/gid
       - name: chown-data-directory
         image: {{.Values.image}}
+        imagePullPolicy: IfNotPresent
         securityContext:
           runAsUser: 0
         volumeMounts:
